# my_project_Robt.yt

./: README.md
docs/: hardware.md  hardware.md.txt
face_detection/: package.xml
face_detection/scripts/: a.py
src/: CMakeLists.txt
src/face_detection/: CMakeLists.txt
src/shell_scripts/: complete.sh  cv.sh  remote.sh  run_shells.py
src/voice_chat/: CMakeLists.txt  GPT_SECRET_KEY.json  package.xml
src/zeta_chat/: CMakeLists.txt  classification_node.py  gpt_node.py  voice_node.py  zeta_chat.launch
src/zeta_chat/srv/: RecognizeSpeech.srv  SynthesizeSpeech.srv
src/zetax/: CMakeLists.txt  package.xml  urdf.rviz
src/zetaxbot_bringup/: CMakeLists.txt  package.xml
src/zetaxbot_controller/: CMakeLists.txt
src/zetaxbot_controller/launch/: controller.launch
src/zetaxbot_controller/src/: angles_converter.cpp
src/zetaxbot_controller/srv/: AnglesConverter.srv
src/zetaxbot_moveCMD/: CMakeLists.txt  package.xml
src/zetaxbot_moveit/: .setup_assistant  CMakeLists.txt  package.xml
src/zetaxbot_remote/: CMakeLists.txt  package.xml
src/zetaxbot_remote/action/: ZetaxbotTask.action
src/zetaxbot_remote/launch/: remote_interface.launch
src/zetaxbot_remote/scripts/: .~lock.left_arm (copy).csv#  .~lock.left_hand.csv#  .~lock.right_arm.csv#  alexa_interface.py  get_angles.py  head.csv  joint_angles.csv  left_arm.csv  left_hand.csv  movement_redirevtional.py  movements_parser.py  right_arm copy.csv  right_arm.csv  task_server.py  task_server_notEdited.py
src/zetaxbot_remote/scripts/complex_signs/: bring.csv  bye.csv  engineer.csv  hello.csv  help.csv  how.csv  how_are_you.csv  no.csv  no_via_hand.csv  sure.csv  true.csv  what.csv  work.csv  yes.csv  you_plural.csv
src/zetaxbot_remote/scripts/movements/: down.csv  fh  head1.csv  head10.csv  head2.csv  head3.csv  iii  ioio  kkk  move1  move10.csv  move2  move3  move4.csv  move5.csv  move6.csv  move7.csv  move8.csv  move9.csv  raise.csv  raiseLeft.csv  raiseRight.csv  welcome.csv
src/zetaxbot_remote/scripts/single_movement/: bad_right_arm.csv  bad_right_hand.csv  good_right_arm.csv  you_right_arm.csv  you_right_hand.csv
src/zetaxbot_remote/scripts/single_movement/All/: left.csv  right.csv
src/zetaxbot_remote/src/: task_server.cpp
voice_chat/: CMakeLists.txt  package.xml
voice_chat/scripts/: classifiction.csv  gpt_node.py  voice_node.py
zeta_chat/: package.xml  speech_recognition_node.py
zeta_chat/srv/: GetGptResponse.srv
zetax/: CMakeLists.txt  package.xml
zetax/config/: joint_names_zetax.yaml
zetax/launch/: display.launch  gazebo.launch
zetax/meshes/: head_up_down_J46.STL  left_bicep_J26.STL  left_hand_J27.STL  left_index_J33.STL  left_little_J42.STL  left_little_J44.STL  left_little_J45.STL  left_middle_J36.STL  left_ring_J39.STL  left_shoulder_forw_backw_J25.STL  left_shoulder_up_down_J24.STL  left_wrist_J28.STL  right_hand_J4.STL  right_index_J10.STL  right_index_J11.STL  (+6 more)
zetaxbot_controller/: package.xml
(+77 files in other folders)
